objects/dgAI3__DG_Log_Event__e.object
<CustomObject>
    <fields>
        <fullName>dgAI3__Context__c</fullName>
        <label>Context</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dgAI3__Message__c</fullName>
        <label>Message</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dgAI3__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dgAI3__UserId__c</fullName>
        <label>User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DG Log Event</label>
    <pluralLabel>DG Log Events</pluralLabel>
</CustomObject>